--- a/src/styles/-works.scss
+++ b/src/styles/-works.scss
@@ -93,6 +93,7 @@
                 margin-right:10px;
                 border-radius:2px;
                 line-height:28px;
+                background:none;
                 padding:0px 5px;
                 font-size:13px;
                 color:#4c4c4c;
