--- a/src/styles/-workOrder.scss
+++ b/src/styles/-workOrder.scss
@@ -95,6 +95,7 @@
                 line-height:28px;
                 padding:0px 5px;
                 font-size:13px;
+                background:none;
                 color:#4c4c4c;
                 cursor: pointer;
                 position: relative;                
