--- a/src/styles/-singleperson.scss
+++ b/src/styles/-singleperson.scss
@@ -1,3 +1,4 @@
+.personAnalysis{}
 .personTopTab{
     background-color: #fff;
     padding: 20px 30px;
@@ -5,36 +6,51 @@
         .choosetit{
             font-size: 13px;
             color: #666;
-            width: 75px;
+            width: 65px;
             display: inline-block;
             vertical-align: middle;
+            line-height: 25px;
         }
         .departItems{
-            .el-radio-button__inner{
-                color: #4d4d4d;
+            span{
+                color: #4c4c4c;
                 font-size: 13px;
                 border: none;
                 padding: 6px 16px;
+                line-height: 25px;
                 background-color: #eff4f8;
-            }
-            .el-radio-button+.el-radio-button{
-                margin-left: 10px;
-            }
-            .el-radio-button__orig-radio:checked + .el-radio-button__inner {
-                background-color:  #2f88ff;
-                color: #fff;
-            }
-            .el-radio-button:first-child .el-radio-button__inner{
-                border-radius: 0;
-            }
-            .el-radio-button:last-child .el-radio-button__inner{
-                border-radius: 0;
+                margin-left:10px;
+                cursor: pointer;
+                &.active{
+                    background-color:  #2f88ff;
+                    color: #fff;
+                    i{
+                    border: 1px solid $menuActiveText;
+                    background: $menuActiveText;
+                    &:before{
+                        content:'';
+                        width: 7px;
+                        height: 4px;
+                        transform: rotate(-45deg);
+                        border-left: 1px solid #fff;
+                        border-bottom: 1px solid #fff;
+                        position: absolute;
+                        left: 1px;
+                        top: 1px;
+                    }
+                    }
+                    span{
+                    color: $menuActiveText;
+                    }
+                    b{
+                    color: lighten($menuActiveText, 20);
+                    }
+                }
             }
         }
         
     }
     .choosePerson{
-        .personItems{
             margin-top: 16px;
             margin-left: 75px;
             padding-top: 10px;
@@ -54,32 +70,46 @@
                 left: 35px;
                 top: -7px;
             }
-            .el-checkbox__label{
-                font-size: 12px;
-                color: #313131;
-                padding-left: 8px;
+            .departItems{
+                .item-checkbox{
+                    float: left;
+                    border: none;
+                    padding-right:18px;
+                    cursor: pointer;
+                    line-height: 24px;
+                    i{
+                        display: inline-block;
+                        width: 11px;
+                        height: 11px;
+                        border: 1px solid #848484;
+                        margin-right: 10px;
+                        position: relative;
+                        box-sizing: border-box;
+                        border-radius:50%;
+                        vertical-align: middle;
+                    }
+                    span{
+                        font-size: 12px;
+                        display: inline-block;
+                        color: #313131;
+                    }
+                    &.active,&:hover{
+                        i{
+                            border: 1px solid #2f88ff;
+                            &:before{
+                                content:'';
+                                width: 7px;
+                                height: 7px;
+                                background:#2f88ff;
+                                border-radius:50%;
+                                position: absolute;
+                                left:1px;
+                                top:1px;
+                            }
+                        }
+                    }
+                }
             }
-            .el-checkbox__inner{
-                width: 11px;
-                height: 11px;
-                border: solid 1px #818181;
-                border-radius: 50%;
-            }
-            .el-checkbox__input.is-checked .el-checkbox__inner{
-                background-color: transparent;
-                border-color: #5598fc;
-            }
-            .el-checkbox__input.is-checked .el-checkbox__inner::after{
-                width: 7px;
-	            height: 7px;
-	            background-color: #5598fc;
-                transform: rotate(0deg) scaleY(1);
-                left: 1px;
-                border: none;
-                border-radius: 50%;
-                transition: all 0.05s;
-            }
-        }
     }
 }
 
