统计系统菜单优化

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -33,6 +33,7 @@
 @import './-DepIndex.scss';
 @import './-MemberCompare.scss';
 @import './-singleperson.scss';
+@import './-stat.scss';
 .clear{
   clear:both;
   display:block;  
