--- a/src/styles/-singleperson.scss
+++ b/src/styles/-singleperson.scss
@@ -2,6 +2,7 @@
 .personTopTab{
     background-color: #fff;
     padding: 20px 30px;
+    margin-bottom:20px;
     .chooseDepart{
         .choosetit{
             font-size: 13px;
@@ -21,30 +22,9 @@
                 background-color: #eff4f8;
                 margin-left:10px;
                 cursor: pointer;
-                &.active{
+                &.active,&:hover{
                     background-color:  #2f88ff;
                     color: #fff;
-                    i{
-                    border: 1px solid $menuActiveText;
-                    background: $menuActiveText;
-                    &:before{
-                        content:'';
-                        width: 7px;
-                        height: 4px;
-                        transform: rotate(-45deg);
-                        border-left: 1px solid #fff;
-                        border-bottom: 1px solid #fff;
-                        position: absolute;
-                        left: 1px;
-                        top: 1px;
-                    }
-                    }
-                    span{
-                    color: $menuActiveText;
-                    }
-                    b{
-                    color: lighten($menuActiveText, 20);
-                    }
                 }
             }
         }
@@ -53,8 +33,8 @@
     .choosePerson{
             margin-top: 16px;
             margin-left: 75px;
-            padding-top: 10px;
-            padding-bottom: 10px;
+            padding-top:5px;
+            padding-bottom:5px;
             padding-left: 12px;
             max-width: 1400px;
             border: solid 1px #f3f3f3;
@@ -111,18 +91,84 @@
                 }
             }
     }
+    .multiSelect{
+            margin-top: 16px;
+            margin-left: 75px;
+            padding-top:5px;
+            padding-bottom:5px;
+            padding-left: 12px;
+            max-width: 1400px;
+            border: solid 1px #f3f3f3;
+            position: relative;
+            .decor{
+                position: absolute;
+                width: 12px;
+                height: 12px;
+                border-left: 1px solid #f3f3f3;
+                border-top: 1px solid #f3f3f3;
+                background: #fff;
+                transform: rotate(55deg) skew(20deg);
+                left: 35px;
+                top: -7px;
+            }
+            .departItems{
+                .item-checkbox{
+                    float: left;
+                    border: none;
+                    padding-right:18px;
+                    cursor: pointer;
+                    line-height: 24px;
+                    i{
+                        display: inline-block;
+                        width: 11px;
+                        height: 11px;
+                        border: 1px solid #848484;
+                        margin-right: 10px;
+                        position: relative;
+                        box-sizing: border-box;
+                        vertical-align: middle;
+                    }
+                    span{
+                        font-size: 12px;
+                        display: inline-block;
+                        color: #313131;
+                    }
+                    &.active,&:hover{
+                        i{
+                            border: 1px solid #2f88ff;
+                            background:#2f88ff;
+                            &:before {
+                                content: '';
+                                width: 7px;
+                                height: 4px;
+                                transform: rotate(-45deg);
+                                border-left: 1px solid #fff;
+                                border-bottom: 1px solid #fff;
+                                position: absolute;
+                                left: 1px;
+                                top: 1px;
+                            }
+                        }
+                    }
+                }
+            }
+    }
 }
 
 .middleBox{
-    margin-top: 22px;
     &:after{
         content: '';
         display: block;
         clear: both;
     }
+    position: relative;
     .personalCard{
         width: 27%;
         float: left;
+        &.fixed{
+            position: absolute;
+            left:0px;
+        }
     }
     .middleRight{
         width: calc(73% - 20px);
@@ -181,6 +227,7 @@
                 width: 100px;
                 height: 100px;
                 border-radius: 50%;
+                overflow: hidden;
             }
         }
         .personName{
@@ -210,6 +257,7 @@
             background-size: 100% 100%;
             position: relative;
             z-index: 1;
+            text-align:center;
             .num01,.num02{
                 font-size: 16px;
                 line-height: 34px;
@@ -246,6 +294,11 @@
                 width: 18px;
                 height: 18px;
                 margin-right: 10px;
+            }
+            &:hover{
+                border: solid 1px #858585;
+                color:#525252;
+                background:#fff;
             }
         }
         .pHistory{
@@ -352,13 +405,15 @@
         flex-direction: row;
         .yearTabItem{
             flex: 1;
-            padding: 25px 40px;
+            padding: 25px 30px;
             background-color: #f9f9f9;
 	        border: solid 1px #e8e8e8;
+            position: relative; 
             cursor: pointer;
             .yearTabTitle{
                 color: #808080;
                 font-size: 13px;
+                line-height:20px;
                 span{
                     display: inline-block;
                     vertical-align: top;
@@ -371,7 +426,9 @@
             .yearNum{
                 color: #151515;
                 font-size: 22px;
-                margin-top: 15px;
+                line-height: 24px;
+                padding-top: 8px;
+                padding-bottom: 6px;
             }
             .numCompare{
                 background-color: #ebecec;
@@ -379,7 +436,6 @@
                 padding: 4px 10px;
                 color: #999999;
                 font-size: 12px;
-                margin-top: 5px;
                 display: inline-block;
                 .numsep{
                     display: inline-block;
@@ -398,32 +454,33 @@
                         left: 0;
                         top: 1px;
                     }
-                }
-                .numdec{
-                    &:before{
-                        transform: rotate(180deg);
-                        top: 2px;
+                    &.numdec{
+                        color: #27d12c;
+                        &:before{
+                            background-image: url(../assets/increace01.png);
+                            top: 2px;
+                        }
                     }
+                }
+            }
+            &.active{
+                background-color: #fff;
+                border-bottom: none; 
+                padding:25px 30px;          
+                &:before{
+                    content: '';
+                    display: block;
+                    position: absolute;
+                    left: 0;
+                    top: 0;
+                    width: 100%;
+                    height: 2px;
+                    background-color: #3e91fe;
                 }
             }
         }
         .yearTabItem+.yearTabItem{
             border-left: none;
-        }
-        .yearTabActive{
-            background-color: #fff;
-            border-bottom: none;
-            position: relative;
-            &:before{
-                content: '';
-                display: block;
-                position: absolute;
-                left: 0;
-                top: 0;
-                width: 100%;
-                height: 2px;
-                background-color: #3e91fe;
-            }
         }
     }
     .chartContainer{
@@ -531,9 +588,9 @@
         .awardicon{
             display: inline-block;
             vertical-align: top;
-            width: 22px;
-            height: 26px;
-            background: url(../assets/departIcon02.png) center center no-repeat;
+            width: 30px;
+            height: 28px;
+            background: url(../assets/mildeal.png) center center no-repeat;
             background-size: 100% auto;
         }
         .awardicon+.awardicon{
@@ -598,44 +655,60 @@
         }
     }
 }
-
 .compareWho{
-    padding: 22px 35px;
-    position: relative;
-    background-color: #fff;
-    .user_img{
+    clear: both;
+    margin-left:-20px;
+    .compareWhoItem{
         float: left;
-        width: 52px;
-        height: 52px;
-        border-radius: 50%;
-        border: solid 2px #8fb2f3;
-        margin-right: 16px;
-    }
-    .user_name{
-        h4{
-            color: #333333;
-            font-size: 14px;
-            padding-top: 10px;
+        width: calc(25% - 20px);
+        padding: 22px 35px;
+        position: relative;
+        background-color: #fff;
+        margin-left: 20px;
+        .user_img{
+            float: left;
+            width: 52px;
+            height: 52px;
+            border-radius: 50%;
+            border: solid 2px #8fb2f3;
+            margin-right: 16px;
+            overflow: hidden;
         }
-        p{
-            color: #999999;
-            font-size: 13px;
-            margin-top: 7px;
+        &.nouser{
+            .user_img{
+            border: dashed 2px #e6e6e6;
+            }
         }
-    }
-    .delIt{
-        position: absolute;
-        width: 18px;
-        height: 18px;
-        right: 10px;
-        top: 10px;
-        background: url(../assets/del_icon.png) center center no-repeat;
-        background-size: 8px auto;
-    }
-    &:after{
-        content: '';
-        display: block;
-        clear: both;
+        .user_name{
+            h4{
+                color: #333333;
+                font-size: 14px;
+                padding-top: 10px;
+            }
+            p{
+                color: #999999;
+                font-size: 13px;
+                margin-top: 7px;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
+        }
+        .delIt{
+            position: absolute;
+            width: 18px;
+            height: 18px;
+            right: 10px;
+            top: 10px;
+            background: url(../assets/del_icon.png) center center no-repeat;
+            background-size: 8px auto;
+            cursor: pointer;
+        }
+        &:after{
+            content: '';
+            display: block;
+            clear: both;
+        }  
     }
 }
 
@@ -730,7 +803,7 @@
                 text-align: center;
                 color: #1a1a1a;
                 font-size: 12px;
-                padding: 18px 0;
+                padding: 15px 0;
             }
             .el-table th.el-table__cell{
                 background-color: #f4f6f9;
@@ -782,63 +855,191 @@
                 background-color: #999;
                 display: inline-block;
             }
+            .totalnum{
+                i{
+                    display: inline-block;
+                    vertical-align: top;
+                    width: 30px;
+                    height: 28px;
+                    background: url(../assets/mildeal.png) center center no-repeat;
+                    background-size: 100% auto;
+                }
+                span{
+                    display: inline-block;
+                    &:before{display: none!important;}
+                }
+            }
         }
         .rightLines{
             width: calc(100% - 400px);
             float: right;
-            .personNote{
-                text-align: right;
-                .noteitem{
-                    display: inline-block;
-                    vertical-align: middle;
-                    margin-left: 30px;
-                    color: #999999;
-                    font-size: 12px;
-                    &:before{
-                        content: '';
-                        display: inline-block;
-                        vertical-align: middle;
-                        width: 12px;
-                        height: 3px;
-                        margin-right: 5px;
-                    }
-                }
-                .noteitem1:before{
-                    background-color: #8fb2f3;
-                }
-                .noteitem2:before{
-                    background-color: #ffc544;
-                }
-                .noteitem3:before{
-                    background-color: #77e5b3;
-                }
-                .noteitem4:before{
-                    background-color: #fa9472;
-                }
-            }
-            #inquiryLine{
-                margin-top: 15px;
-                height: 270px;
-            }
-            #scoreLine{
-                margin-top: 15px;
-                height: 270px;
-            }
-            #millionLine{
-                margin-top: 15px;
-                height: 270px;
-            }
-            #awardLine{
-                margin-top: 15px;
-                height: 270px; 
+            height: 270px;
+            position: relative;
+            .inquiryLine{
+                position: absolute;
+                left:0px;
+                top:-35px;
+                right: 0px;
             }
         }
+    }
+}
+.page-root{
+    .history-dialog{
+        .el-dialog__header{
+            position: relative;
+            z-index: 4;
+            .el-dialog__headerbtn{
+                top: 23px;
+                right: 18px;
+                &:hover{
+                    .el-dialog__close{
+                        color: #f35555;
+                    }
+                }
+            }
+        }
+        .el-dialog__body{
+            padding:5px 45px 0px 45px!important;
+            position: relative;
+            &:after{
+                position: absolute;
+                left:0px;
+                bottom:0px;
+                width:100%;
+                height:30px;                
+                background: -moz-linear-gradient(top,rgba(0,0,0,0) 0%, #ffffff 100%);
+                background: -webkit-linear-gradient(top,rgba(0,0,0,0) 0%,#ffffff 100%);
+                background: -o-linear-gradient(top,rgba(0,0,0,0) 0%,#ffffff 100%);
+                background: -ms-linear-gradient(top,rgba(0,0,0,0) 0%,#ffffff 100%);
+                background: linear-gradient(to bottom,rgba(0,0,0,0) 0%,#ffffff 100%);
+            }
+        }
+    }
+}
+.history-dialog{
+    clear: both;
+    display: block;
+    background:url(../assets/personalHistoryBg.png) no-repeat left top #fff;
+    background-size:100%;
+    height:455px;
+    border-radius: 0;
+    .historyWho{
+        clear: both;
+        display: block;
+        position: relative;
+        padding-bottom:37px;
+        .user_img{
+            float: left;
+            width:44px;
+            height:44px;
+            border-radius: 50%;
+            margin-right: 15px;
+            overflow: hidden;
+        }
+        .user_name{
+            h4{
+                color: #333333;
+                font-size: 13px;
+                line-height:21px;
+            }
+            p{
+                color: #909090;
+                font-size: 13px;
+                line-height:21px;
+            }
+        }
+    }
+    .historyList{
+        clear: both;
+        display: block;
+        height:335px;
+        overflow: hidden;
+        overflow-y: scroll;
+        li{
+            clear: both;
+            display: block;
+            padding-bottom:46px;
+            position: relative;
+            &:before{
+                content:'';
+                position: absolute;
+                left:109px;
+                top:0px;
+                bottom:0px;
+                width:0px;
+                border-left:1px solid #f0f0f0;
+            }
+            &:last-child{
+                padding-bottom:0px;
+            }
+            .historyName{
+                float: left;
+                width:95px;
+                text-align: left;
+                color:#858585;
+                font-size:13px;
+                line-height:26px;
+            }
+            .historyIcon{
+                float: left;
+                width: 30px;
+                height: 35px;
+                position: relative;
+                background: #fff;
+                padding: 3px 0px;
+                span{
+                    position: absolute;
+                    left:0px;
+                    top:3px;
+                    &.icon01{
+                        width: 30px;
+                        height: 29px;
+                        background:url(../assets/in1.png) no-repeat left top;
+                        background-size: 100%;
+                    }
+                    &.icon02{
+                        width:40px;
+                        height:38px;
+                        background:url(../assets/mildeal.png) no-repeat left top;
+                        background-size: 100%;
+                    }
+                }
+            }
+            .historyTap{
+                float: left;
+                width:113px;
+                height:26px;
+                background:url(../assets/personalHistoryIcon01.png) no-repeat left top;
+                color:#fff;
+                line-height:26px;
+                font-size:13px;
+                text-align: center;
+                margin-right:15px;
+                margin-left:30px;
+            }
+            .historyCon{
+                float: left;
+                font-size:13px;
+                line-height:26px;
+                color:#252525;
+                width: 370px;
+            }
+        }
+        &::-webkit-scrollbar {width: 4px;height: 1px;}
+        &::-webkit-scrollbar-thumb {box-shadow: inset 0 0 1px #f3f3f3;background: #f35555;}
+        &::-webkit-scrollbar-track {background: #fff;}
+
     }
 }
 
 @media screen and (max-width:1440px){
     .middleBox .personalCard{
         width: 100%;
+        &.fixed{
+            position:static;
+            left:auto;
+        }
         .personMsg{
             width: 30%;
             float: left;
@@ -870,7 +1071,6 @@
     }
     .middleBox .middleRight{
         width: 100%;
-        margin-top: 20px;
     }
     .personScoreNum .scoreTable{
         width: 100%;
