--- a/src/styles/-teamMember.scss
+++ b/src/styles/-teamMember.scss
@@ -2,7 +2,7 @@
   .filter-panel{
     background-color: #fff;
     .filter-list{
-      padding: 15px;
+      padding: 15px 30px;
       .item-filter{
         &.group{
           .filter-content{
@@ -39,7 +39,7 @@
           }
         }
         .filter-title{
-          width: 90px;
+          width: 70px;
           padding: 3px;
           .txt-title{
             display: block;
@@ -47,7 +47,7 @@
             line-height: 28px;
             font-size: 13px;
             color: #666666;
-            text-align: right;
+            text-align: left;
           }
         }
         .filter-content{
@@ -186,17 +186,45 @@
                 margin-left: 4px;
               }
             }
+            .item-reset{
+              display:inline-block;
+              vertical-align:top;
+              height: 28px;
+              margin: 3px 10px;
+              position:relative;
+              padding: 0 20px;
+              &:before{
+                content:'';
+                display:block;
+                position:absolute;
+                left:0;
+                top: 8px;
+                height: 12px;
+                width: 1px;
+                background: #e6e6e6;
+              }
+              span{
+                display:inline-block;
+                vertical-align:top;
+                height: 28px;
+                line-height: 28px;
+                font-size: 14px;
+                color: $menuActiveText;
+                cursor:pointer;
+                padding: 0 10px;
+                position:relative;
+              }
+            }
           }
         }
       }
     }
     .filter-tips{
       border-top: 1px solid #f0f0f0;
-      height: 45px;
       p{
-        padding: 0 30px;
+        padding: 10px 30px;
         font-size: 12px;
-        line-height: 44px;
+        line-height: 24px;
         color: #a6a6a6;
         i{
           margin-right: 10px;
@@ -207,9 +235,9 @@
   .contrast-panel{
     background-color: #fff;
     margin-top: 20px;
-    padding: 9px 15px;
+    padding: 9px 30px;
     .title-font{
-      width: 90px;
+      width: 63px;
       padding: 3px;
       .txt-title{
         display: block;
@@ -217,7 +245,7 @@
         line-height: 28px;
         font-size: 13px;
         color: #666666;
-        text-align: right;
+        text-align: left;
       }
     }
     .contrast-content{
@@ -857,10 +885,15 @@
               padding: 0 0 30px;
             }
           }
+          .map-chart{
+            position:relative;
+            top: 50%;
+            transform: translateY(-50%);
+          }
         }
         .region-rank{
           width: 300px;
-          min-height:340px;
+          min-height:343px;
           margin-left: 30px;
           background-color: #f3f8ff;
           .txt-header{
@@ -1039,6 +1072,65 @@
       }
       .compare-wrapper+.compare-wrapper{
         margin-top: 20px;
+      }
+    }
+  }
+}
+
+.tooltip-panel{
+  min-width: 120px;
+  padding: 5px 0 10px;
+  &.date{
+    min-width: 160px;
+  }
+  .tooltip-title{
+    height: 24px;
+    line-height: 24px;
+    font-weight:bold;
+  }
+  .tooltip-body{
+    width: 100%;
+    .tooltip-dl{
+      width: 100%;
+      .tooltip-dt{
+        width: 100%;
+        height:24px;
+        display:flex;
+        .txt-name{
+          flex: 1;
+          height: 24px;
+          line-height: 24px;
+          font-weight:bold;
+        }
+        .txt-value{
+          height: 24px;
+          line-height: 24px;
+          font-weight:bold;
+        }
+      }
+      .tooltip-dd{
+        display:flex;
+        height: 24px;
+        .txt-name{
+          flex: 1;
+          height: 24px;
+          line-height: 24px;
+          padding-left: 10px;
+          position:relative;
+          i{
+            display:block;
+            width: 8px;
+            height: 8px;
+            border-radius: 100%;
+            position:absolute;
+            left:0;
+            top: 8px;
+          }
+        }
+        .txt-value{
+          height: 24px;
+          line-height: 24px;
+        }
       }
     }
   }
