--- a/src/styles/-variables.scss
+++ b/src/styles/-variables.scss
@@ -16,7 +16,7 @@ $lightPrimaryBg: #eaf3ff;
 $lightPrimaryBorder: #d5e7ff;
 // sidebar
 $menuText:#bfcbd9;
-$menuActiveText:#2e88ff;
+$menuActiveText:#0970ff;
 $subMenuActiveText:#f4f4f5; // https://github.com/ElemeFE/element/issues/12951
 
 $menuBg:#20222A;
