--- a/src/styles/element_variables.scss
+++ b/src/styles/element_variables.scss
@@ -4,7 +4,7 @@
 **/
 
 /* theme color */
-$--color-primary: #2e88ff;
+$--color-primary: #0970ff;
 $--color-success: #13ce66;
 $--color-warning: #ffba00;
 $--color-danger: #ff4949;
