--- a/src/styles/-singleperson.scss
+++ b/src/styles/-singleperson.scss
@@ -222,12 +222,24 @@
                 background-size: 100% auto;
                 z-index: -1;
             }
-            img{
+            span{
                 border: solid 2px #fae6ba;
                 width: 100px;
                 height: 100px;
                 border-radius: 50%;
                 overflow: hidden;
+                position: relative;
+                display: block;
+                margin: 0 auto;
+                img{
+                    position: absolute;
+                    left: 0px;
+                    width: 100%;
+                    top: 0%;
+                    height: 100%!important;
+                    object-fit: cover;
+                    transition: all 0.5s;
+                }
             }
         }
         .personName{
