--- a/src/styles/-singleperson.scss
+++ b/src/styles/-singleperson.scss
@@ -236,7 +236,6 @@
                     left: 0px;
                     width: 100%;
                     top: 0%;
-                    height: 100%!important;
                     object-fit: cover;
                     transition: all 0.5s;
                 }
@@ -998,7 +997,7 @@
             .historyIcon{
                 float: left;
                 width: 30px;
-                height: 35px;
+                height:26px;
                 position: relative;
                 background: #fff;
                 padding: 3px 0px;
@@ -1011,12 +1010,18 @@
                         height: 29px;
                         background:url(../assets/in1.png) no-repeat left top;
                         background-size: 100%;
+                        position: absolute;
+                        left: 0px;
+                        top: -1px;
                     }
                     &.icon02{
                         width:40px;
                         height:38px;
                         background:url(../assets/mildeal.png) no-repeat left top;
                         background-size: 100%;
+                        position: absolute;
+                        left: 0px;
+                        top: 0px;
                     }
                 }
             }
@@ -1051,8 +1056,10 @@
     .middleBox .personalCard{
         width: 100%;
         &.fixed{
-            position:static;
-            left:auto;
+            position: relative;
+            left: auto;
+            top: 0px!important;
+            margin-bottom: 20px;
         }
         .personMsg{
             width: 30%;
