--- a/src/styles/-singleperson.scss
+++ b/src/styles/-singleperson.scss
@@ -540,15 +540,28 @@
         }
         .line3{
             margin-left: 32px;
+            padding-left: 26px;
             &:before{
                 content: '';
                 display: block;
                 position: absolute;
                 left: 0;
                 top: 5px;
-                width: 12px;
+                width: 19px;
                 height: 3px;
-	            background-color: #5fce45;
+                background-color: #5fce45;
+            }
+            &:after{
+                content: '';
+                display: block;
+                position: absolute;
+                left: 4px;
+                top: 5px;
+                width: 11px;
+                height: 3px;
+                background: none;
+                border-left: 3px solid #fff;
+                border-right: 3px solid #fff;
             }
         }
     }
