--- a/src/styles/-MemberCompare.scss
+++ b/src/styles/-MemberCompare.scss
@@ -126,7 +126,6 @@
                             left: 0px;
                             width: 100%;
                             top: 0%;
-                            height: 100% !important;
                             -o-object-fit: cover;
                             object-fit: cover;
                             transition: all 0.5s;
@@ -317,7 +316,6 @@
                             left: 0px;
                             width: 100%;
                             top: 0%;
-                            height: 100% !important;
                             -o-object-fit: cover;
                             object-fit: cover;
                             transition: all 0.5s;
@@ -523,7 +521,6 @@
                             left: 0px;
                             width: 100%;
                             top: 0%;
-                            height: 100% !important;
                             -o-object-fit: cover;
                             object-fit: cover;
                             transition: all 0.5s;
@@ -735,6 +732,7 @@
                 height: 36px;
                 border-radius: 4px;
                 background: url(../assets/default_pic.jpg) center center no-repeat;
+                background-size:100%;
                 margin-left: auto;
                 margin-right: auto;
                 &.headImgBorder{
@@ -883,7 +881,6 @@
                             left: 0px;
                             width: 100%;
                             top: 0%;
-                            height: 100% !important;
                             -o-object-fit: cover;
                             object-fit: cover;
                             transition: all 0.5s;
@@ -898,6 +895,7 @@
                     position: relative;
                     cursor: pointer;
                     background: url(../assets/default_pic.jpg) center center no-repeat;
+                    background-size:100%;
                 }    
             }
             .userName{
