--- a/src/styles/-WebsiteList.scss
+++ b/src/styles/-WebsiteList.scss
@@ -287,12 +287,13 @@
                     }
                 }
                 &.WebsiteOnePath{
-                    a{
+                    span{
                         display:inline-block;
                         line-height:24px;
                         margin-left:10px;
                         color:$menuActiveText;
                         font-size:13px;
+                        cursor: pointer;
                         &:hover{
                             text-decoration:underline;
                         }
